@@ -21,7 +21,20 @@ dependencies {
 // we'll hold the testlib to a low standard (prize brevity)
 spotbugs { reportLevel = 'high' } // low|medium|high (low = sensitive to even minor mistakes)
 
-test { useJUnitPlatform() }
+test {
+	useJUnitPlatform()
+	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+		// for GJF https://github.com/diffplug/spotless/issues/834
+		def args = [
+			'--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+			'--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+			'--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+			'--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+			'--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+		]
+		jvmArgs args
+	}
+}
 
 apply from: rootProject.file('gradle/special-tests.gradle')
 
